--- a/SistemaAcademico/src/sistemaacademico/visao/VisaoColaborador.form
+++ b/SistemaAcademico/src/sistemaacademico/visao/VisaoColaborador.form
@@ -980,6 +980,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textCodigoEstado">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel8">
               <Properties>
