Códigos não devem ser editáveis

--- a/SistemaAcademico/src/sistemaacademico/visao/VisaoColaborador.form
+++ b/SistemaAcademico/src/sistemaacademico/visao/VisaoColaborador.form
@@ -717,6 +717,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textCodigoTelefone">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
