--- a/SistemaAcademico/src/sistemaacademico/visao/VisaoProjeto.form
+++ b/SistemaAcademico/src/sistemaacademico/visao/VisaoProjeto.form
@@ -233,6 +233,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textCodigo">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textNome">
             </Component>
@@ -436,6 +439,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textCodAtividade">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="labelTituloAtividade">
               <Properties>
@@ -615,7 +621,7 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="2" rowCount="0">
                         <Column editable="false" title="C&#xf3;digo" type="java.lang.Integer"/>
-                        <Column editable="true" title="Nome" type="java.lang.String"/>
+                        <Column editable="false" title="Nome" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
