--- a/SistemaAcademico/src/sistemaacademico/visao/VisaoProjeto.form
+++ b/SistemaAcademico/src/sistemaacademico/visao/VisaoProjeto.form
@@ -85,7 +85,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="painelTitulo" alignment="0" max="32767" attributes="0"/>
-          <Component id="painelColaboradores" alignment="0" max="32767" attributes="0"/>
+          <Component id="painelAbas" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -93,7 +93,7 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="painelTitulo" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="painelColaboradores" max="32767" attributes="0"/>
+              <Component id="painelAbas" max="32767" attributes="0"/>
               <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -138,7 +138,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JTabbedPane" name="painelColaboradores">
+    <Container class="javax.swing.JTabbedPane" name="painelAbas">
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
