--- a/SistemaAcademico/src/sistemaacademico/visao/VisaoTarefa.form
+++ b/SistemaAcademico/src/sistemaacademico/visao/VisaoTarefa.form
@@ -210,7 +210,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Tipo de Tarefa"/>
+            <Property name="text" type="java.lang.String" value="Tipo de Trabalho"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="comboTipo">
